--- a/vue-capitalize/public/index.html
+++ b/vue-capitalize/public/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
     <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
     <link rel="stylesheet" href="<%= BASE_URL %>global.css" />
-    <title>vue-capitalize</title>
+    <title>Titles Capitalized</title>
   </head>
   <body>
     <noscript>
