--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,42 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
+    <title>The Capitalizer — A Title Capitalization Tool</title>
+    <meta
+      name="description"
+      content="A title capitalization tool to turn your text into proper title case automatically according to AP, APA, CMS, MLA, NYT, or WP style rules."
+    />
+    <link rel="canonical" href="https://thecapitalizer.com" />
+    <meta name="twitter:site" content="@TCapitalizer" />
+    <meta
+      property="og:image"
+      content="https://thecapitalizer.com/the_capitalizer.jpg"
+    />
+    <meta
+      property="og:title"
+      content="The Capitalizer — A Title Capitalization Tool"
+    />
+    <meta
+      property="og:description"
+      content="A title capitalization tool to turn your text into proper title case automatically according to AP, APA, CMS, MLA, NYT, or WP style rules."
+    />
+    <meta property="og:type" content="article" />
+    <meta property="og:site_name" content="The Capitalizer" />
+    <meta property="og:url" content="https://thecapitalizer.com" />
+    <meta
+      property="twitter:title"
+      content="The Capitalizer — A Title Capitalization Tool"
+    />
+    <meta
+      property="twitter:description"
+      content="A title capitalization tool to turn your text into proper title case automatically according to AP, APA, CMS, MLA, NYT, or WP style rules."
+    />
+    <meta property="twitter:card" content="summary_large_card" />
+    <meta
+      property="twitter:image:src"
+      content="https://thecapitalizer.com/the_capitalizer.jpg"
+    />
+    <meta property="twitter:creator" content="@TheRoyalFig" />
     <link
       rel="apple-touch-icon"
       sizes="180x180"
