--- a/public/index.html
+++ b/public/index.html
@@ -34,7 +34,7 @@
       property="twitter:description"
       content="A title capitalization tool to turn your text into proper title case automatically according to AP, APA, CMS, MLA, NYT, or WP style rules."
     />
-    <meta property="twitter:card" content="summary_large_card" />
+    <meta property="twitter:card" content="summary_large_image" />
     <meta
       property="twitter:image:src"
       content="https://thecapitalizer.com/the_capitalizer.jpg"
