--- a/public/index.html
+++ b/public/index.html
@@ -4,10 +4,10 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
-    <title>The Capitalizer — A Title Capitalization Tool</title>
+    <title>The Capitalizer — A Lightning-Fast Title Capitalization Tool</title>
     <meta
       name="description"
-      content="A title capitalization tool to turn your text into proper title case automatically according to AP, APA, CMS, MLA, NYT, or WP style rules."
+      content="A lightning-fast title capitalization tool to convert your text into proper title case according to AP, APA, CMS, MLA, NYT, or WP style rules."
     />
     <link rel="canonical" href="https://thecapitalizer.com" />
     <meta name="twitter:site" content="@TCapitalizer" />
@@ -17,22 +17,22 @@
     />
     <meta
       property="og:title"
-      content="The Capitalizer — A Title Capitalization Tool"
+      content="The Capitalizer — A Lightning-Fast Title Capitalization Tool"
     />
     <meta
       property="og:description"
-      content="A title capitalization tool to turn your text into proper title case automatically according to AP, APA, CMS, MLA, NYT, or WP style rules."
+      content="A lightning-fast title capitalization tool to convert your text into proper title case according to AP, APA, CMS, MLA, NYT, or WP style rules."
     />
     <meta property="og:type" content="article" />
     <meta property="og:site_name" content="The Capitalizer" />
     <meta property="og:url" content="https://thecapitalizer.com" />
     <meta
       property="twitter:title"
-      content="The Capitalizer — A Title Capitalization Tool"
+      content="The Capitalizer — A Lightning-Fast Title Capitalization Tool"
     />
     <meta
       property="twitter:description"
-      content="A title capitalization tool to turn your text into proper title case automatically according to AP, APA, CMS, MLA, NYT, or WP style rules."
+      content="A lightning-fast title capitalization tool to convert your text into proper title case according to AP, APA, CMS, MLA, NYT, or WP style rules."
     />
     <meta property="twitter:card" content="summary_large_image" />
     <meta
