--- a/public/index.html
+++ b/public/index.html
@@ -40,29 +40,12 @@
       content="https://thecapitalizer.com/the_capitalizer.jpg"
     />
     <meta property="twitter:creator" content="@TheRoyalFig" />
-    <link
-      rel="apple-touch-icon"
-      sizes="180x180"
-      href="<%= BASE_URL %>apple-touch-icon.png"
-    />
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="32x32"
-      href="<%= BASE_URL %>favicon-32x32.png"
-    />
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="16x16"
-      href="<%= BASE_URL %>favicon-16x16.png"
-    />
-    <link rel="manifest" href="<%= BASE_URL %>site.webmanifest" />
-    <link
-      rel="mask-icon"
-      href="<%= BASE_URL %>safari-pinned-tab.svg"
-      color="#f16b6f"
-    />
+
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+    <link rel="manifest" href="/site.webmanifest" />
+    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#f16b6f" />
     <meta name="msapplication-TileColor" content="#f16b6f" />
     <meta name="theme-color" content="#f16b6f" />
   </head>
