--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,10 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
-    <title>The Capitalizer — A Lightning-Fast Title Capitalization Tool</title>
+    <title>
+      The Capitalizer — A Lightning-Fast Tool for Automatically Capitalizing
+      Titles
+    </title>
     <meta
       name="description"
       content="A lightning-fast title capitalization tool to convert your text into proper title case according to AP, APA, CMS, MLA, NYT, or WP style rules."
@@ -17,7 +20,7 @@
     />
     <meta
       property="og:title"
-      content="The Capitalizer — A Lightning-Fast Title Capitalization Tool"
+      content="The Capitalizer — A Lightning-Fast Tool for Automatically Capitalizing Titles"
     />
     <meta
       property="og:description"
