--- a/public/index.html
+++ b/public/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
     <title>
-      The Capitalizer — A Lightning-Fast Tool for Automatically Capitalizing
-      Titles
+      Title Capitalization Tool - The Capitalizer — Automatically Convert Text
+      to Title Case
     </title>
     <meta
       name="description"
@@ -20,7 +20,7 @@
     />
     <meta
       property="og:title"
-      content="The Capitalizer — A Lightning-Fast Tool for Automatically Capitalizing Titles"
+      content="Title Capitalization Tool - The Capitalizer — Automatically Convert Text to Title Case"
     />
     <meta
       property="og:description"
@@ -31,7 +31,7 @@
     <meta property="og:url" content="https://thecapitalizer.com" />
     <meta
       property="twitter:title"
-      content="The Capitalizer — A Lightning-Fast Title Capitalization Tool"
+      content="Title Capitalization Tool - The Capitalizer — Automatically Convert Text to Title Case"
     />
     <meta
       property="twitter:description"
