--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
     <title>
-      Title Capitalization Tool - The Capitalizer — Automatically Convert Text
+      Title Capitalization Tool - The Capitalizer - Automatically Convert Text
       to Title Case
     </title>
     <meta
@@ -20,7 +20,7 @@
     />
     <meta
       property="og:title"
-      content="Title Capitalization Tool - The Capitalizer — Automatically Convert Text to Title Case"
+      content="Title Capitalization Tool - The Capitalizer - Automatically Convert Text to Title Case"
     />
     <meta
       property="og:description"
@@ -31,7 +31,7 @@
     <meta property="og:url" content="https://thecapitalizer.com" />
     <meta
       property="twitter:title"
-      content="Title Capitalization Tool - The Capitalizer — Automatically Convert Text to Title Case"
+      content="Title Capitalization Tool - The Capitalizer - Automatically Convert Text to Title Case"
     />
     <meta
       property="twitter:description"
