--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
       content="A lightning-fast title capitalization tool to convert your text into proper title case according to AP, APA, CMS, MLA, NYT, or WP style rules."
     />
     <link rel="canonical" href="https://thecapitalizer.com" />
-    <meta name="twitter:site" content="@TCapitalizer" />
+    <meta name="twitter:site" content="@The_Capitalizer" />
     <meta
       property="og:image"
       content="https://thecapitalizer.com/the_capitalizer.jpg"
