--- a/public/index.html
+++ b/public/index.html
@@ -10,39 +10,39 @@
     </title>
     <meta
       name="description"
-      content="A lightning-fast title capitalization tool to convert your text into proper title case according to AP, APA, CMS, MLA, NYT, or WP style rules."
+      content="Tool to convert your text into proper title case according to AP, APA, CMS, MLA, NYT, or WP style rules."
     />
-    <link rel="canonical" href="https://thecapitalizer.com" />
-    <meta name="twitter:site" content="@The_Capitalizer" />
+    <link rel="canonical" href="https://caps.seven.tf" />
+    <meta name="twitter:site" content="@sevenloi" />
     <meta
       property="og:image"
-      content="https://thecapitalizer.com/the_capitalizer.jpg"
+      content="https://caps.seven.tf/the_capitalizer.jpg"
     />
     <meta
       property="og:title"
-      content="Title Capitalization Tool - The Capitalizer - Automatically Convert Text to Title Case"
+      content="Title Capitalization Tool - Automatically Convert Text to Title Case"
     />
     <meta
       property="og:description"
-      content="A lightning-fast title capitalization tool to convert your text into proper title case according to AP, APA, CMS, MLA, NYT, or WP style rules."
+      content="Tool to convert your text into proper title case according to AP, APA, CMS, MLA, NYT, or WP style rules."
     />
     <meta property="og:type" content="article" />
-    <meta property="og:site_name" content="The Capitalizer" />
-    <meta property="og:url" content="https://thecapitalizer.com" />
+    <meta property="og:site_name" content="Capitalization Tool" />
+    <meta property="og:url" content="https://caps.seven.tf" />
     <meta
       property="twitter:title"
-      content="Title Capitalization Tool - The Capitalizer - Automatically Convert Text to Title Case"
+      content="Title Capitalization Tool - Automatically Convert Text to Title Case"
     />
     <meta
       property="twitter:description"
-      content="A lightning-fast title capitalization tool to convert your text into proper title case according to AP, APA, CMS, MLA, NYT, or WP style rules."
+      content="Tool to convert your text into proper title case according to AP, APA, CMS, MLA, NYT, or WP style rules."
     />
     <meta property="twitter:card" content="summary_large_image" />
     <meta
       property="twitter:image:src"
-      content="https://thecapitalizer.com/the_capitalizer.jpg"
+      content="https://caps.seven.tf/the_capitalizer.jpg"
     />
-    <meta property="twitter:creator" content="@TheRoyalFig" />
+    <meta property="twitter:creator" content="@sevenloI" />
   </head>
   <body>
     <noscript>
