--- a/public/index.html
+++ b/public/index.html
@@ -43,6 +43,7 @@
       content="https://thecapitalizer.com/the_capitalizer.jpg"
     />
     <meta property="twitter:creator" content="@TheRoyalFig" />
+    <script defer data-domain="thecapitalizer.com" src="https://plausible.io/js/script.js"></script>
   </head>
   <body>
     <noscript>
